# Sci-git.ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  settings.py  state_manager.py
core/: config.py  hashing.py  processor.py  watcher.py  workers.py
database/: db_handler.py
engine/: ai.py  analytics.py
ui/: axis_and_settings.py  components.py  elements.py  layout.py  screens.py  styles.py
